
Thu Jun 29 19:08:47 CEST 2017
	* Fixed bug disassembling from addr
	* Going for local function var :)... it's gonna take a bit to get it ready :P

Tue Jun 27 22:54:13 CEST 2017
	* Improved memory dumps
	* Added labels and function autocompletion

Sun Jun 25 18:42:16 CEST 2017
	* Added help for commands accepting parameters and general help command
	* Fixed some minor bugs

Sat Jun 24 16:28:11 CEST 2017
	* Updated code to disassemble on the fly
	* ARM Thumb code still does not work :(

Thu Jun 22 18:36:39 CEST 2017
	* Added MEM.POKE function
	* Fixed MEM.DUMP for hex bytes
	* Print single characters for immediate addressing (specially cmp)


Mon Jun 18 19:01:59 CEST 2017
	* Refactored initial PoC