@@ -38,7 +38,9 @@ extern "C" {
   char*  stan_dis_dump_mem (STAN_CORE *k, long addr);
   int    stan_dis_dump_block (STAN_CORE *k, char *fmt, long addr, long len);
   int    stan_dis_poke_block (STAN_CORE *k, char *fmt, long addr, char*str);
+  int    stan_dis_poke_bytes (STAN_CORE *k, long off, char *str);
   int    stan_dis_generate_labels (STAN_CORE *k, char *prefix, long addr, long len);
+  int    stan_dis_poke_offset (STAN_CORE *k, long off, char *str);
 #ifdef __cplusplus
 }
 #endif
